objects/AR_CustomObject1__c.object
<CustomObject>
    <description>Add comment for AR-CustomObject1.</description>
    <fields>
        <fullName>AR_CustomField1__c</fullName>
        <description>Add comment for AR-CustomField1. This is custom field modification for AXA Team</description>
        <label>AR-CustomField1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_CustomField_Demo__c</fullName>
        <description>This is Demonstration with end-to-end process</description>
        <label>AR-CustomField-Demo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AR_Custom_Field3__c</fullName>
        <description>Add Comment for  AR-Custom Field3.</description>
        <label>AR-Custom Field3</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bobtext__c</fullName>
        <label>bobtext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>AR-CustomObject1</label>
    <nameField>
        <label>AR-CustomObject1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR-CustomObject1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>